--- a/src/app.css
+++ b/src/app.css
@@ -28,3 +28,16 @@
   width: 200px;
   height: 200px;
 }
+button {
+  background: blue;
+  border: none;
+  color: white;
+  padding: 10px;
+  font-size: 18px;
+  min-width: 100px;
+  cursor: pointer;
+}
+.person > a {
+  display: block;
+  margin: 5px 0 5px 0;
+}
